data/derived/fa15/progs/unify/prog3773.ml.out
Characters 168-171:
  | Cosine cos		    -> Printf.printf "cos(pi*%s)" cos
                                                  ^^^
Error: This expression has type expr but an expression was expected of type
         string
